# grasp-sampler

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
assets/meshes/: axe_body_spray_metric_fp.glb  baking_soda_box_metric_fp.glb  bandage_box_metric_fp.glb  black_filter_box_metric_fp.glb  blue_cleaner_box_metric_fp.glb  cleaner_canister_metric_fp.glb  palmolive_shampoo_metric_fp.glb  pocky_box_metric_fp.glb  ritz_crackers_metric_fp.glb  ycb_apple_metric_fp.glb  ycb_banana_metric_fp.glb  ycb_baseball_metric_fp.glb  ycb_chips_can_metric_fp.glb  ycb_cracker_box_metric_fp.glb  ycb_foam_brick_metric_fp.glb  ycb_gelatin_box_metric_fp.glb  ycb_large_marker_metric_fp.glb  ycb_lemon_metric_fp.glb  ycb_master_chef_can_metric_fp.glb  ycb_mustard_bottle_metric_fp.glb  ycb_orange_metric_fp.glb  ycb_peach_metric_fp.glb  ycb_pear_metric_fp.glb  ycb_potted_meat_can_metric_fp.glb  ycb_pudding_box_metric_fp.glb  ycb_rubiks_cube_metric_fp.glb  ycb_strawberry_metric_fp.glb  ycb_sugar_box_metric_fp.glb  ycb_tennis_ball_metric_fp.glb  ycb_tomato_soup_can_metric_fp.glb  ycb_tuna_fish_can_metric_fp.glb
docs/: api.md  conf.py  configuration.md  index.md  installation.md  requirements.txt  usage.md  visualization.md
examples/: basic.py  pybullet_demo.py  visualize.py
src/grasp_sampler/: __init__.py  antipodal.py  mesh.py  obb.py  primitives.py  pybullet_sim.py  sampler.py  transforms.py  types.py  viz.py
tools/: decimate_meshes.py
